# northscore-pipeline

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: populate_database.yml  update_db.yml
scripts/: fetch_all_data.py  fetch_all_usports_data.py  update_all_db.py  update_all_usports_db.py
src/config/: settings.py
src/database/: db.py
src/database/models/: basketball.py
src/database/models/usports/: __init__.py  basketball.py  football.py  ice_hockey.py  soccer.py  volleyball.py
src/pipelines/: basketball_pipeline.py  seasonal_logic.py
src/pipelines/usports/: __init__.py  base.py  basketball.py  football.py  ice_hockey.py  soccer.py  volleyball.py
src/utils/: constants.py  helpers.py  logger.py
src/validations/: basketball_validations.py  common_validations.py
src/validations/usports/: __init__.py  basketball.py  football.py  ice_hockey.py  soccer.py  volleyball.py
