[project]
name = "usports-data-pipeline"
version = "0.1.0"
description = "A multi-sport data pipeline for U Sports data"
authors = [{ name = "OJ Adeyemi", email = "ojieadeyemi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "usports @ git+https://github.com/ojadeyemi/usports.git",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
